@@ -18,12 +18,13 @@ import java.io.Reader;
 import java.text.NumberFormat;
 import java.text.ParseException;
 import java.time.OffsetDateTime;
-import java.time.ZoneId;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+
+import static com.farao_community.farao.gridcapa_core_valid.app.CoreValidConstants.PARIS_ZONE_ID;
 
 /**
  * @author Ameni Walha {@literal <ameni.walha at rte-france.com>}
@@ -35,37 +36,39 @@ public final class StudyPointsImporter {
         throw new IllegalStateException("Utility class");
     }
 
-    public static List<StudyPoint> importStudyPoints(InputStream inputStream) {
+    public static List<StudyPoint> importStudyPoints(final InputStream inputStream) {
         return importStudyPoints(new InputStreamReader(inputStream));
     }
 
-    public static List<StudyPoint> importStudyPoints(InputStream studyPointsStream, OffsetDateTime timestamp) {
-        List<StudyPoint> allStudyPoints = StudyPointsImporter.importStudyPoints(studyPointsStream);
-        int period = timestamp.atZoneSameInstant(ZoneId.of("Europe/Paris")).getHour();
-        return allStudyPoints.stream().filter(studyPoint -> studyPoint.getPeriod() == period).toList();
+    public static List<StudyPoint> importStudyPoints(final InputStream studyPointsStream, final OffsetDateTime timestamp) {
+        final List<StudyPoint> allStudyPoints = importStudyPoints(studyPointsStream);
+        final int period = timestamp.atZoneSameInstant(PARIS_ZONE_ID).getHour();
+        return allStudyPoints.stream()
+                .filter(studyPoint -> studyPoint.getPeriod() == period)
+                .toList();
     }
 
-    private static List<StudyPoint> importStudyPoints(Reader reader) {
+    private static List<StudyPoint> importStudyPoints(final Reader reader) {
         try {
-            List<StudyPoint> studyPoints = new ArrayList<>();
-            CSVReader csvReader = new CSVReaderBuilder(reader)
+            final List<StudyPoint> studyPoints = new ArrayList<>();
+            final CSVReader csvReader = new CSVReaderBuilder(reader)
                     .withCSVParser(buildParser())
                     .build();
-            List<String[]> lines = csvReader.readAll();
-            String[] headers = lines.get(0);
+            final List<String[]> lines = csvReader.readAll();
+            final String[] headers = lines.getFirst();
             for (int i = 1; i < lines.size(); i++) {
                 studyPoints.add(importStudyPoint(headers, lines.get(i)));
             }
             return studyPoints;
-        } catch (Exception e) {
+        } catch (final Exception e) {
             throw new CoreValidInvalidDataException("Exception occurred during parsing study point file", e);
         }
     }
 
-    private static StudyPoint importStudyPoint(String[] headers, String[] data) throws ParseException {
-        int period = Integer.parseInt(data[0]);
-        String id = data[1];
-        Map<String, Double> positions = new HashMap<>();
+    private static StudyPoint importStudyPoint(final String[] headers, final String[] data) throws ParseException {
+        final int period = Integer.parseInt(data[0]);
+        final String id = data[1];
+        final Map<String, Double> positions = new HashMap<>();
         for (int i = 2; i < data.length; i++) {
             positions.put(headers[i], NumberFormat.getInstance(Locale.FRANCE).parse(data[i]).doubleValue());
         }
